# KiroManager

./: .gitignore  build.bat  build_mac.sh  package-lock.json  package.json
.github/workflows/: build.yml
src/: icons.js  index.html  input.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  db.rs  local_kiro.rs  main.rs  models.rs
