[package]
name = "kiro-manager"
version = "1.0.0"
edition = "2021"
description = "Kiro 账号管理器 - Tauri 版"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"
anyhow = "1"
url = "2"
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
